[tool.poetry]
name = "ugragatekeeper"
version = "0.1.0-rc"
description = ""
authors = ["Nikita Sychev <nsychev@teamteam.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.22.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
moderator = "ugragatekeeper.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
